Switch from sun.security.x509 to Bouncy Castle API (#560)
Co-authored-by: Valera V Harseko <vharseko@3a-systems.ru>